# hardcyber

./: .gitignore  CMakeLists.txt  README.md  Team210.nfo  common.h  config.h  config_types.h  draw.h  genscale.py  ls.c  pal_linux.h  pal_win32.h  scenes.h  sequence.h  sfx.frag  sfx.h
engine/: loader.h  orchestrator.h  platform.h  renderer.h  shader.h
font/: font.h  font.py  pack.py  strings.txt
gfx/: deadline.frag  fractal.frag  glitchcity.frag  graffiti.frag  greetings.frag  hardcyber.json  hardcyber_synced.json  hydrant.frag  load.frag  load.h  logo210.frag  ocean.frag  post.frag  post.h  starsky.frag  symbolize.py  symbols.h  text.frag  text.h  volclouds.frag  voronoinet.frag  watercubes.frag
gfx/symbols/: add.frag  addprogressbar.frag  addwindow.frag  analytical_box.frag  analytical_sphere.frag  d5711.frag  dbox.frag  dbox210.frag  dbox3.frag  dcircle.frag  dcirclesegment.frag  ddeadline.frag  dfarbrausch.frag  dfloat.frag  dglyph.frag  dhaujobb.frag  dhexagonpattern.frag  dint.frag  dkewlers.frag  dlinesegment.frag  dlinesegment3.frag  dlogo210.frag  dmercury.frag  doctahedron.frag  dpolygon.frag  dquadvoronoi.frag  drevision.frag  drhomboid.frag  dschnappsgirls.frag  dsmoothvoronoi.frag  dsmoothvoronoi3.frag  dspacepigs.frag  dspiral.frag  dspline2.frag  dspline3.frag  dstar.frag  dstar3.frag  dstring.frag  dtime.frag  dtriangle.frag  (+34 more)
minification/: Compressor.py  GLSLLexer130.py  Rule.py  Token.py  shader-compressor.py  symbolize.py
sketch/: 5711.frag  extract.py  fconv.bat  fconv.c  fconv.frag  path.frag
studio/: demoapi.cpp  demoapi.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderviewwidget.cpp  renderviewwidget.h  studio.cpp
test/: GLSLLexerTest.py
